--- a/02- HTML/index.html
+++ b/02- HTML/index.html
@@ -11,7 +11,7 @@
     <div class="navContainer">
      <nav>
        <ul>
-         <img src="images/cakeLogo.png" alt="">
+        <img src="assets/images/cakeLogo.png" alt="">
          <li><a href="index.html">Productos</a></li>
          <li><a href="pedidos.html">Pedidos</a></li>
          <li><a href="contacto.html">Contacto</a></li>
